# MegaClassifier

./: .gitignore  00_a_DownloadExternalData.ipynb  00_a_Download_ExternalRepos.ipynb  00_b_RunMegadetector.ipynb  01_a_ConvertRAWDataset.ipynb  01_a_DatasetBasicStatistics.ipynb  01_a_GenerateDataset.ipynb  01_b_CropDataset.ipynb  01_b_CropDatasetCSV.ipynb  01_b_CropDatasetFolder.ipynb  01_b_DataClean.ipynb  01_b_GenerateReducedDataset.ipynb  01_c_CropDatasetCSV.ipynb  01_c_CropDatasetFolder.ipynb  01_c_GenerateFormatDatasetFolder.ipynb  01_c_SplitDataset.ipynb  01_d_SplitDataset.ipynb  02_a_GenerateDetections.ipynb  02_a_GenerateDetections_SearchThresh.ipynb  02_b_AnalizeCoverage.ipynb  02_b_AnalizeThresholdResults.ipynb  02_c_AnalizeThresholdResults.ipynb  02_c_GenerateDetections&SearchThreshold.ipynb  02_c_GenerateDetectionsDataset.ipynb  03_a_GenerateMask.ipynb  03_b_GenerateMaskedImages.ipynb  03_c_GenerateBBoxes.ipynb  04_a_GenerateFitImages.ipynb  04_b_GenerateFitImagesWithPadding.ipynb  05_a_CreateDatasets.ipynb  05_a_CreateDatasets_Original.ipynb  05_a_CreateDatasets_Preprocessed.ipynb  05_a_CreateDatasets_Trainings.ipynb  05_a_MegaDetectorDefault.ipynb  05_a_Original_MobileNetV2_V1.ipynb  05_a_Train_MobileNetV2_v1.0.ipynb  05_a_Train_MobileNetV2_v1.1.ipynb  05_a_Train_MobileNetV2_v1.2.ipynb  05_a_Train_MobileNetV2_v2.0.ipynb  05_a_Train_MobileNetV2_v2.1.ipynb  (+115 more)
00_Desarrollo/: a01_GeneraDetecciones.py  ejecutar_megadetector.py
MegaClassifier/: __init__.py
data/: 10000Imagenes.csv  10000Test.csv  10000Train.csv  10000Validation.csv  10001Imagenes.csv  700Test.csv  (+2 more)
(+3497 files in other folders)
